<?xml version="1.0" encoding="utf-8"?>

<com.hjq.shape.layout.ShapeConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/pop_exit"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginHorizontal="17dp"
    android:paddingBottom="21dp"
    app:shape_radius="28dp"
    app:shape_solidColor="#091938">

    <ImageView
        android:id="@+id/iv_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:src="@drawable/ic_dialog_exit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_0"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/end_navigation"
        android:gravity="center"
        android:textColor="@color/white90"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/iv_icon" />


    <TextView
        android:id="@+id/tv_1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="17dp"
        android:gravity="center"
        android:layout_marginTop="8dp"
        android:text="@string/end_navigation_"
        android:textColor="@color/white90"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_0" />


    <com.hjq.shape.view.ShapeTextView
        android:id="@+id/tv_done"
        android:layout_width="0dp"
        android:layout_height="47dp"
        android:layout_marginHorizontal="17dp"
        android:layout_marginTop="30dp"
        android:gravity="center"
        android:text="@string/end"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_1"
        app:shape_radius="13dp"
        app:shape_solidColor="@color/theme_color"
        app:shape_strokeWidth="1dp" />

    <com.hjq.shape.view.ShapeTextView
        android:id="@+id/tv_cancel"
        android:layout_width="0dp"
        android:layout_height="47dp"
        android:layout_marginHorizontal="17dp"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:text="@string/continue_navigation"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_done" />



</com.hjq.shape.layout.ShapeConstraintLayout>
